# key4hep-skeleton

./: .gitignore  CMakeLists.txt
scripts/: buid_locally.sh  setup_k4env.sh
skeleton/: CMakeLists.txt
skeleton/options/: run_skeleton.py
skeleton/src/components/: SelectEvents.cpp  SelectEvents.h  SkeletonAlgorithm.cpp  SkeletonAlgorithm.h
